# sdl3-snake

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  README.md  build.fish  build.ps1
itchIOtemplate/: index.html
src/: main.cpp
src/class/: App.cpp  App.h  IAppProcess.h  Snake.cpp  Snake.h  Sound.cpp  Sound.h  Text.cpp  Text.h
src/unique/: FPSRecorder.cpp  FPSRecorder.h
